--- a/src/critique_film/templates/film_detail.html
+++ b/src/critique_film/templates/film_detail.html
@@ -1,5 +1,5 @@
-<h2>{{ film.titre }}</h2>
+<!-- <h2>{{ film.titre }}</h2>
 <p>Réalisateur: {{ film.realisateur }}</p>
 <p>Année de sortie: {{ film.annee_sortie }}</p>
 <p>Genre: {{ film.genre }}</p>
-
+ -->
